option java_outer_classname = "LCQueryTerminalRegister";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.terminal";

message QueryTerminalRegister{
	required int64 terminalId = 1; 
}