option java_outer_classname = "LCTRCollectParaModifyRecordRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query.travelrecorder";

import "core/proto/common/java/ResponseResult.proto";
import "core/proto/terminal/query/travelrecorder/block/java/ModifyRecord.proto";


message TRCollectParaModifyRecordRes{
	required	int32			serialNumber		=1;
	required	ResponseResult	result				=2;
	repeated	ModifyRecord	records				=3;
}

