option java_outer_classname = "LCTRCollectRealTimeRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query.travelrecorder";

import "core/proto/common/java/ResponseResult.proto";

message TRCollectRealTimeRes{
	required	int32				serialNumber			=1;
	required	ResponseResult		result					=2;
	optional	int64				currentDate				=3;
}