option java_outer_classname = "LCTRCollectSpeedLogRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query.travelrecorder";

import "core/proto/common/java/ResponseResult.proto";
import "core/proto/terminal/query/travelrecorder/block/java/LogBlock.proto";

message TRCollectSpeedLogRes{
	required	int32				serialNumber		=1;
	required	ResponseResult		result				=2;
	repeated	LogBlock			logBlocks			=3;
}

