option java_outer_classname = "LCTRCollectStatusSignalRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query.travelrecorder";

import "core/proto/terminal/common/java/SignalData.proto";
import "core/proto/common/java/ResponseResult.proto";

message TRCollectStatusSignalRes{
	required	int32				serialNumber		=1;
	required	ResponseResult		result				=2;
	optional	int64				currentDate			=3;
	repeated	SignalData			datas				=4;
}