option java_outer_classname = "LCTRCollectVehicleInfoRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query.travelrecorder";

import "core/proto/common/java/ResponseResult.proto";

message TRCollectVehicleInfoRes{
	required	int32					serialNumber		=1;
	required	ResponseResult			result				=2;
	optional	string					IdentifyCode		=3;
	optional	string					licenseNumber		=4;
	optional	string					licenseType			=5;
}